# ChangeLog for dev-util/gambas
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/gambas/Attic/ChangeLog,v 1.44 2008/05/21 16:01:49 dev-zero Exp $

  21 May 2008; Tiziano Müller <dev-zero@gentoo.org> gambas-1.0.14.ebuild,
  gambas-1.0.16.ebuild, gambas-1.0.17.ebuild, gambas-1.9.23.ebuild:
  Changed dependency for postgresql from dev-db/postgresql to
  virtual/postgresql-server

  23 Nov 2006; Francesco Riosa <vivo@gentoo.org> gambas-1.0.14.ebuild,
  gambas-1.0.16.ebuild, gambas-1.0.17.ebuild, gambas-1.9.23.ebuild:
  dev-db/mysql => virtual/mysql

*gambas-1.0.17 (17 Nov 2006)

  17 Nov 2006; Marius Mauch <genone@gentoo.org> +gambas-1.0.17.ebuild:
  Version bump

  12 Jul 2006; Danny van Dyk <kugelfang@gentoo.org> gambas-1.9.23.ebuild:
  QA: Added gtk to IUSE.

*gambas-1.0.16 (05 May 2006)

  05 May 2006; Marius Mauch <genone@gentoo.org> -gambas-1.0.6.ebuild,
  -gambas-1.0.10.ebuild, -gambas-1.0.13.ebuild, gambas-1.0.14.ebuild,
  +gambas-1.0.16.ebuild:
  Bump 1.0.14 to stable, add 1.0.16 as ~x86, remove outdated versions.
  Fix sqlite dependency so sqlite-3.x doesn't satisfy it anymore.

  27 Apr 2006; Marien Zwart <marienz@gentoo.org> files/digest-gambas-1.0.6,
  files/digest-gambas-1.0.10, Manifest:
  Fixing SHA256 digest, pass four

*gambas-1.0.14 (25 Jan 2006)

  25 Jan 2006; Marius Mauch <genone@gentoo.org> +gambas-1.0.14.ebuild:
  Version bump

  22 Jan 2006; Marius Mauch <genone@gentoo.org> gambas-1.9.23.ebuild:
  Replacing pdflib use flag with pdf use flag

*gambas-1.9.23 (17 Jan 2006)

  17 Jan 2006; Marius Mauch <genone@gentoo.org> +gambas-1.9.23.ebuild:
  Add package.masked development version with SLOT="2".
  This version supports several additional use flags for the new components,
  also includes a new buildsystem which should be saner than the old one.

*gambas-1.0.13 (16 Jan 2006)

  16 Jan 2006; Marius Mauch <genone@gentoo.org> -gambas-1.0.4.ebuild,