@@ -6,9 +6,9 @@ DIST gambas-1.0.14.tar.bz2 4504399 RMD160 613db5727c92fe160de14e269f16a783ea2978
 DIST gambas-1.0.16.tar.bz2 4502796 RMD160 5c4f929af2f937f78703b82cb6c7280514438384 SHA1 56e7721da84b00f27b9e1462034720213f22859e SHA256 5c06c97f1c3d57e0dcefc0074eaf30b2f93e8dcaa06611200632ce1d07e4644a
 DIST gambas-1.0.17.tar.bz2 4503254 RMD160 41dec84b1ff386695024852c0d2aae7008c9cafc SHA1 7e9ea626718c763fde1718b854e47feed3b01b38 SHA256 a3cc619033f1a917b5e258dbb21b0abb3d365b19f1e37f2343820f8870c7ed80
 DIST gambas2-1.9.23.tar.bz2 8213765 RMD160 ddad436e17bb959ce7e26a4284cc0e9b65b3ea16 SHA1 baa8f8667f5ec9e386ffe522b959345944443b2c SHA256 ca049da1accf363165403b73f5639ebe258fd3e8996827ec671dcdac5f74e57e
-EBUILD gambas-1.0.14.ebuild 2228 RMD160 2ac37056e224252f70df6c0bf509705e6bbdc16e SHA1 2014bdb083abbb5e366fa117e25818663dd24aee SHA256 df39694d83161afc575eaba472541c6db10e4c2c4ac8e57200fc130436cb0abd
-EBUILD gambas-1.0.16.ebuild 2229 RMD160 49e9d9ff0671f60d312eeb0fef1fcce455d5fc23 SHA1 c0ae1642103fa053b24da1e4e49ac321cac6d0e2 SHA256 56ceb4dfcbc94bbff51a70c6400a0b113ac6e12c55ef5bfd9f058448881c74fd
-EBUILD gambas-1.0.17.ebuild 2229 RMD160 296604201efc500217cb7cc037706e0b104f2cad SHA1 1899f2d82b7cf16e9e763ff2c4362608b681f9e5 SHA256 53cc50c5ceeb942a8e1a88c4485258cf8ae974f2d6ffb1c8e4265f25767ce57f
+EBUILD gambas-1.0.14.ebuild 2222 RMD160 85f49f6feaecab0820b446c3c0655efaafcc6c45 SHA1 b9336a18aeacae4fac57a7f11946676ebcec241a SHA256 962758c04164f01291c906c8a5b7008b0e6b0d4a8a6673243eac35f155d8aa0f
+EBUILD gambas-1.0.16.ebuild 2221 RMD160 0351e8ce29faf754572f54ee6930776be51da531 SHA1 21f076d66e9fabd8205c80dd280412a0276553db SHA256 196a075c72bf7ebe3fa42e7b27340f684d299fd79c1ff45b7d8b84bb5fd1a306
+EBUILD gambas-1.0.17.ebuild 2221 RMD160 36818a9c6672f2a0b80c780bd51a817fc5cf9103 SHA1 1df85035192725739a927da73e168fb2d7d46a9b SHA256 dff89bababc36ecaa17c0aa9494e0095ce5eb56ae4cfce327e1db8899fc1a12c
 EBUILD gambas-1.9.23.ebuild 3030 RMD160 7415fdd47e01f617a6dac5dd3e0df298f4179d63 SHA1 504c830d83e72a7dee19fc4c91f160b896746648 SHA256 500d96efc90452b23fa60dda56bd73b5b02dc43e57ebc5bcb9fc7c382b3f4166
-MISC ChangeLog 8073 RMD160 0251e14fe3fa0a7a038ab70191d49fb9b0ac05e8 SHA1 c0625e23979cf83bd6d6f9ec67a6300197c0d72d SHA256 cf7dddc246bcd3806fc0d2da784ea3bb009db66a7d0478c2ff84b06469ba8f4e
+MISC ChangeLog 8238 RMD160 f512986e5dbcd22251b26ee60d0d20c8b42e0e6b SHA1 4e7349d9a44cd73ed0cde73b67fe04769c6f00f2 SHA256 e0693fa3cc89229c3fb4b1e40126e16090e8090742a61828678432fecff230fe
 MISC metadata.xml 233 RMD160 d81ec1a0582856aeac5ef3bfec5c80d9850216f6 SHA1 9b94f113e7f382076b1749c2a856e409c96cade3 SHA256 dce03f6cdd96135caf3c971a5ca4a8c916f44532fe8cfb6df88b7bdade407e8b
